# journey-of-reverse-engineering

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
.github/: copilot-instructions.md
docs/: 01.md
