[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frida-app"
version = "0.1.0"
description = "Frida-based application"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "frida>=16.1.5",
    "frida-tools>=12.3.0",
    "objection>=1.11.0",
    "pynacl>=1.5.0",
    "pygments>=2.16.1",
    "paramiko>=3.3.1",
    "requests>=2.31.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "litecli>=1.9.0",
    "tqdm>=4.66.1",
    "prompt-toolkit>=3.0.39",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]